--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "status"
   ],
   "author": "ivan@yivoff.com",
-  "license": "GPLv2",
+  "license": "LGPL-3.0+",
   "bugs": {
     "url": "https://github.com/yivi/wp-revised-status/issues"
   },
